--- a/COS_OSF_collaboration_network.ipynb
+++ b/COS_OSF_collaboration_network.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f349605",
+   "id": "6f269a3a",
    "metadata": {},
    "source": [
     "### Data collection <a class=\"anchor\" id=\"data_collection\">"
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f8e9d22",
+   "id": "98d524d4",
    "metadata": {},
    "source": [
     "Data was collected using the [OSF API](https://developer.osf.io/) in Python via the requests module.\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "465d6ed3",
+   "id": "a2983128",
    "metadata": {},
    "source": [
     "|node type|guid|title|date created|root|parent|child|grandchild|tags|contributors|\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d108ff64",
+   "id": "f7f7e8c3",
    "metadata": {},
    "source": [
     "In theory, additional levels of organization exist for some number of projects. This approach to data collection intentionally leaves them on the table to optimize the time commitment of data collection with the added value of information gathered. The operating assumption is that for projects with many levels of organization, child nodes increasingly reflect the properties of their parents, and therefore do not contribute much, if any, novel information about the identities of collaborators in this network."
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "240bced1",
+   "id": "d8b6e2a4",
    "metadata": {},
    "source": [
     "The current database includes 3,424 user profiles and 1,160 child nodes under 664 root nodes, with 6,062 grandchild nodes identified for further investigation.\n",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "361646b4",
+   "id": "4557da72",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8817beed",
+   "id": "38bef1b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "557eb6ec",
+   "id": "f9029ea5",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "601ffa0c",
+   "id": "6f1bdf28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ab24bec6",
+   "id": "44cdc79f",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d74acb73",
+   "id": "a2d66c27",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b4d78ec3",
+   "id": "90e9eba2",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c56bf59d",
+   "id": "64afb649",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8e15d45c",
+   "id": "57ecd355",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b5bd1d70",
+   "id": "6ef9ae6a",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "965b99ef",
+   "id": "2af9e178",
    "metadata": {
     "scrolled": true
    },
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d0c77a06",
+   "id": "13da3291",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5750012f",
+   "id": "60a3c0e4",
    "metadata": {},
    "source": [
     "![](OSF-EDA.png)"
@@ -502,7 +502,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f56af56e",
+   "id": "506b186b",
+   "metadata": {},
+   "source": [
+    "*Image not loading? Check it out at the raw [here](OSF-EDA.png).*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85ab4d35",
    "metadata": {},
    "source": [
     "### Contents of this repository <a class=\"anchor\" id=\"materials\">\n",
@@ -511,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f50802b1",
+   "id": "d6e5ad4c",
    "metadata": {},
    "source": [
     "#### Data collection and storage <a class=\"anchor\" id=\"materials_data\">\n",
@@ -571,14 +579,6 @@
     "\n",
     "Contains one function, `create_network()` which queries DB to gather the majority of relevant data for analysis and returns pandas DataFrames for convenient use thereafter."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c07a1b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
