--- a/COS_OSF_collaboration_network.ipynb
+++ b/COS_OSF_collaboration_network.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "A more encouraging result is that the majority of collaborators return to work with COS more than once, with 1,761 (54%) having at least 2 OSF projects in common with a COS staff member, including 262 who have at least 10 COS collaborations. The results of this analysis indicate that COS staff who engage with external collaborators via the OSF have demonstrated success managing relationships effectively as measured by collaborator re-engagement.\n",
     "\n",
-    "#### Future directions\n",
+    "### Future directions\n",
     "\n",
     "With the currently existing data:\n",
     "- Identify possible candidates for Institutions accounts by clustering collaborators by affiliations through user profile data.\n",
