sort projects summary index correctly

--- a/COS_OSF_collaboration_network.ipynb
+++ b/COS_OSF_collaboration_network.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "This analysis evaluates the current state of one of the primary initiatives of the 2022-2025 Strategic Plan - Relationship Management - through the lens of a collaboration network on OSF centered on COS staff. Data collected via the OSF API reveals that current COS staff have first degree connections with 3,255 external collaborators. Accounting for connections based on sharing a project with Brian, only 1,449 (45%) of these connections are shown to enter the network exclusively via other staff. This result highlights the importance of developing relationships outside the established network given Brian's high centrality in it and the implied siloing of COS activities in the Psychology community.\n",
     "\n",
-    "A more encouraging result is that the majority of collaborators return to work with COS more than once, with 1,761 (54%) having at least 2 OSF projects in common with a COS staff member, including 262 who have at least 10 COS collaborations. The results of this analysis indicate that COS staff who engage with external collaborators via the OSF have demonstrated success managing relationships effectively as measured by collaborator re-engagement.\n",
+    "A more encouraging result is that the majority of collaborators return to work with COS more than once, with 1,761 (54%) having at least 2 OSF projects in common with a COS staff member, including 306 who have at least 10 COS collaborations. The results of this analysis indicate that COS staff who engage with external collaborators via the OSF have demonstrated success managing relationships effectively as measured by collaborator re-engagement.\n",
     "\n",
     "### Future directions\n",
     "\n",
@@ -28,6 +28,7 @@
     "- Describe collaborator network growth over time using user and project created dates.\n",
     "- Analyze frequency of tag use and content.\n",
     "- Compare general COS staff behaviors on OSF by individual, department, etc.\n",
+    "- Play \"7 degrees to Brian Nosek\"\n",
     "\n",
     "With additional data collection:\n",
     "- Evaluate the impact of collaboration with COS on OSF behaviors in projects without direct COS involvement.\n",
@@ -372,7 +373,7 @@
     "edges_summary_projects = current_edges.drop_duplicates().groupby('external').count().reset_index()\n",
     "edges_summary_projects.rename({'project_guid': 'num_projects'}, axis=1, inplace=True)\n",
     "projects_summary = edges_summary_projects.value_counts('num_projects')\n",
-    "projects_summary.index = projects_summary.index.sort_values()"
+    "projects_summary = projects_summary.sort_index()"
    ]
   },
   {
@@ -461,7 +462,7 @@
     {
      "data": {
       "text/plain": [
-       "262"
+       "306"
       ]
      },
      "execution_count": 14,
