update node type count

--- a/COS_OSF_collaboration_network.ipynb
+++ b/COS_OSF_collaboration_network.ipynb
@@ -103,7 +103,14 @@
    "id": "d8b6e2a4",
    "metadata": {},
    "source": [
-    "The current database includes 3,424 user profiles and 1,160 child nodes under 664 root nodes, with 6,062 grandchild nodes identified for further investigation.\n",
+    "The current database includes 3,424 user profiles and 9,722 nodes. The nodes may be distinguished as follows:\n",
+    "\n",
+    "||n|\n",
+    "|:---:|:---:|\n",
+    "|root, no child nodes|334|\n",
+    "|root|664|\n",
+    "|child|2,662|\n",
+    "|grandchild|6,062|\n",
     "\n",
     "Instructions to reproduce data collection are available in the contents of this repository section."
    ]
@@ -143,40 +150,12 @@
    "outputs": [],
    "source": [
     "# define network features\n",
-    "users, projects, edges = create_network()"
+    "users, edges = create_network()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4557da72",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "type\n",
-       "root           664\n",
-       "child         1160\n",
-       "grandchild    6062\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# how many nodes at each level of project organization?\n",
-    "project_summary = projects.value_counts('type')\n",
-    "project_summary['root'] = len(projects.root.unique())\n",
-    "project_summary.sort_values()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "38bef1b4",
    "metadata": {},
    "outputs": [],
@@ -188,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f9029ea5",
    "metadata": {},
    "outputs": [
@@ -198,7 +177,7 @@
        "3255"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6f1bdf28",
    "metadata": {},
    "outputs": [],
@@ -248,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "44cdc79f",
    "metadata": {},
    "outputs": [
@@ -258,7 +237,7 @@
        "1449"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a2d66c27",
    "metadata": {},
    "outputs": [
@@ -289,7 +268,7 @@
        "44.516129032258064"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "90e9eba2",
    "metadata": {},
    "outputs": [
@@ -351,7 +330,7 @@
        "9186  xh5r9  Lisa Cuevas Shaw"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "64afb649",
    "metadata": {},
    "outputs": [],
@@ -378,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "57ecd355",
    "metadata": {},
    "outputs": [
@@ -409,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "6ef9ae6a",
    "metadata": {},
    "outputs": [
@@ -419,7 +398,7 @@
        "1761"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "2af9e178",
    "metadata": {
     "scrolled": true
@@ -443,7 +422,7 @@
        "54.10138248847927"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "13da3291",
    "metadata": {},
    "outputs": [
@@ -465,7 +444,7 @@
        "306"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
